# torch-synapse

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
.circleci/: config.yml
examples/experiments/: __init__.py  continual_learning.py  joint_learning.py  sequential_learning.py
examples/task_dicts/: __init__.py  cifar10.py  cifar100.py  mnist.py
examples/utils/: learning.py
synapse/: __init__.py  _base.py  gradient.py  rehearsal.py  structure.py
synapse/modules/: __init__.py  indexed_accuracy_score.py  indexed_cross_entropy_loss.py  multi_linear.py
synapse/utils/: __init__.py  buffer.py  task_dict.py
test/: test_gradient.py  test_rehearsal.py  test_structure.py
test/modules/: test_indexed_accuracy_score.py  test_indexed_cross_entropy_loss.py  test_multi_linear.py
test/utils/: test_buffer.py  test_task_dict.py
